--- a/Rules/MediaHub/A_MediaHub.yaml
+++ b/Rules/MediaHub/A_MediaHub.yaml
@@ -16,8 +16,6 @@ payload:
   - DOMAIN,stream4.misakaf.org # MisakaF 公费服播放流
   - DOMAIN,stream5.misakaf.org # MisakaF 公费服播放流（战未来）
 #
-  - DOMAIN,us.nanflix.net # Nanflix
-#
   - DOMAIN,cavps.eu.org                  # 鹅服 CF
   - IP-CIDR,50.114.55.29/32,no-resolve   # 鹅服 SG
   - DOMAIN,wmxz.567996.xyz               # 鹅服 KR
@@ -25,5 +23,9 @@ payload:
   - DOMAIN,emby.pppp.us.kg               # 鹅服 JP
   - IP-CIDR,141.11.175.105/32,no-resolve # 鹅服 HK
   - IP-CIDR,154.12.53.34/32,no-resolve   # 鹅服 9929
+#
+  - DOMAIN,us.nanflix.net # Nanflix
+#
+  - DOMAIN,lite.saturday.video # SaturDay
 #
   - DOMAIN-SUFFIX,tanhuatv.site # 探花 TV 主线路
