--- a/Rules/MediaHub/A_MediaHub.yaml
+++ b/Rules/MediaHub/A_MediaHub.yaml
@@ -28,4 +28,7 @@ payload:
 #
   - DOMAIN,lite.saturday.video # SaturDay
 #
+  - IP-CIDR,192.99.35.111/32,no-resolve # 起点站 CA 直连
+  - DOMAIN,tdck.fun                     # 起点站 Cloudflare
+#
   - DOMAIN-SUFFIX,tanhuatv.site # 探花 TV 主线路
