--- a/Rules/Proxy/A_Proxy.yaml
+++ b/Rules/Proxy/A_Proxy.yaml
@@ -26,7 +26,7 @@ payload:
   - DOMAIN-SUFFIX,nmnm.fun
   - DOMAIN-SUFFIX,nodeseek.com
   # - DOMAIN-SUFFIX,nmteam.xyz
-  - DOMAIN-SUFFIX,".xyz"
+  - DOMAIN-SUFFIX,xyz
   - DOMAIN-KEYWORD,sms-activate
   - IP-CIDR,154.23.185.44/32,no-resolve # SDKDNS
   - IP-CIDR,8.219.119.196/32,no-resolve # Claw-SG
