--- a/Rules/Direct/A_Direct.yaml
+++ b/Rules/Direct/A_Direct.yaml
@@ -9,6 +9,7 @@ payload:
   - DOMAIN,ip.3322.net
   - DOMAIN,4.ipw.cn
   - DOMAIN,v4.yinghualuo.cn
+  - DOMAIN,emby.awatv.de # Emby-AWA
   - DOMAIN-SUFFIX,msftncsi.com
   - DOMAIN-SUFFIX,msftconnecttest.com
   - DOMAIN-SUFFIX,us.kg
