--- a/Rules/AIGC/A_AIGC.yaml
+++ b/Rules/AIGC/A_AIGC.yaml
@@ -6,6 +6,7 @@ payload:
   - DOMAIN-SUFFIX,cursor.so
   - DOMAIN-SUFFIX,fuclaude.com
   - DOMAIN-SUFFIX,genspark.ai
+  - DOMAIN-SUFFIX,grok.com
   - DOMAIN-SUFFIX,iask.ai
   - DOMAIN-SUFFIX,monica.im
   - DOMAIN-SUFFIX,mychandler.bet
