--- a/Rules/AIGC/A_AIGC.yaml
+++ b/Rules/AIGC/A_AIGC.yaml
@@ -12,4 +12,5 @@ payload:
   - DOMAIN-SUFFIX,mychandler.bet
   - DOMAIN-SUFFIX,perplexity.ai
   - DOMAIN-SUFFIX,poe.com
+  - DOMAIN-SUFFIX,x.ai
   - DOMAIN-SUFFIX,you.com
