--- a/Rules/MediaHub/A_MediaHub.yaml
+++ b/Rules/MediaHub/A_MediaHub.yaml
@@ -39,3 +39,5 @@ payload:
   - IP-CIDR,185.163.116.145/32,no-resolve # 9clubs CN 直连
 #
   - DOMAIN-SUFFIX,tanhuatv.site # 探花 TV 主线路
+#
+  - DOMAIN-SUFFIX,cherry-pornemby.top # Cherry Emby
