--- a/Rules/AIGC/A_AIGC.yaml
+++ b/Rules/AIGC/A_AIGC.yaml
@@ -14,3 +14,5 @@ payload:
   - DOMAIN-SUFFIX,poe.com
   - DOMAIN-SUFFIX,x.ai
   - DOMAIN-SUFFIX,you.com
+  - DOMAIN-SUFFIX,sora.com
+  - DOMAIN-SUFFIX,mete.ai
